# APL_Game

./: .gitignore  CMakeLists.txt  build_mac.sh  configure_mac.sh  configure_windows.bat  readme.md
Cpp/include/: Block.h  Enemy.h  Game.h  Hittable.h  Player.h  Scene.h
Cpp/net/: LANDiscovery.cpp  LANDiscovery.h  NetMessages.h  NetworkClient.cpp  NetworkClient.h
Cpp/src/: Block.cpp  Enemy.cpp  Game.cpp  Hittable.cpp  Player.cpp  Scene.cpp  main.cpp
Cs/Dashboard/: App.xaml.cs  Dashboard.csproj  Directory.Build.props  MainPage.xaml  MainPage.xaml.cs
Cs/Dashboard/Network/: NetworkClient.cs  Packet.cs
Go/: Server.go
buildWindows/net9.0-windows10.0.19041.0/win10-x64/: Dashboard.build.appxrecipe  Dashboard.deps.json  resources.pri
build_mac/: APL_Game  Server
build_mac/net9.0-maccatalyst/maccatalyst-arm64/: LinkerInputs.cache  NativeLink.cache  codesign-bundle.items  postprocessing.items
build_mac/net9.0-maccatalyst/maccatalyst-arm64/Dashboard.app/Contents/: Info.plist
build_mac/net9.0-maccatalyst/maccatalyst-arm64/Dashboard.app/Contents/_CodeSignature/: CodeResources
cmake/: FindSFML.cmake
include/: Block.h  Game.h  GameObject.h  Player.h  Scene.h
net/: NetworkClient.h
src/: Block.cpp  Game.cpp  Player.cpp  Scene.cpp  main.cpp
